data/derived/sp14/progs/unify/prog1772.ml.out
Characters 295-360:
  | _ when r < 30 && r > 20 -> buildThresh((build(rand, depth - 1)), (buildCosine(build(rand, depth - 1))))
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr * expr * expr * expr
